model/y.output

state 0
	$accept: .translation_unit $end 

	IDENTIFIER  shift 13
	COMMENT_SECTION_ID  shift 9
	IMPORT_ID  shift 10
	PACKAGE_ID  shift 6
	TYPE_STRING_ID  shift 16
	TYPE_INT_ID  shift 15
	TYPE_FLOAT_ID  shift 17
	TYPE_BOOL_ID  shift 18
	TYPE_TESTPLAN_ID  shift 19
	'('  shift 14
	.  error

	declaration_specifiers  goto 8
	type_specifier  goto 12
	declarator  goto 7
	direct_declarator  goto 11
	function_definition  goto 4
	external_declaration  goto 2
	translation_unit  goto 1
	package_definition  goto 3
	import_definition  goto 5

state 1
	$accept:  translation_unit.$end 
	translation_unit:  translation_unit.external_declaration 

	$end  accept
	IDENTIFIER  shift 13
	COMMENT_SECTION_ID  shift 9
	IMPORT_ID  shift 10
	PACKAGE_ID  shift 6
	TYPE_STRING_ID  shift 16
	TYPE_INT_ID  shift 15
	TYPE_FLOAT_ID  shift 17
	TYPE_BOOL_ID  shift 18
	TYPE_TESTPLAN_ID  shift 19
	'('  shift 14
	.  error

	declaration_specifiers  goto 8
	type_specifier  goto 12
	declarator  goto 7
	direct_declarator  goto 11
	function_definition  goto 4
	external_declaration  goto 20
	package_definition  goto 3
	import_definition  goto 5

state 2
	translation_unit:  external_declaration.    (1)

	.  reduce 1 (src line 279)


state 3
	external_declaration:  package_definition.    (3)

	.  reduce 3 (src line 297)


state 4
	external_declaration:  function_definition.    (4)

	.  reduce 4 (src line 305)


state 5
	external_declaration:  import_definition.    (5)

	.  reduce 5 (src line 312)


state 6
	package_definition:  PACKAGE_ID.LITERAL_STRING 

	LITERAL_STRING  shift 21
	.  error


state 7
	function_definition:  declarator.compound_statement 

	'{'  shift 23
	.  error

	compound_statement  goto 22

state 8
	function_definition:  declaration_specifiers.declarator compound_statement 

	IDENTIFIER  shift 13
	'('  shift 14
	.  error

	declarator  goto 24
	direct_declarator  goto 11

state 9
	function_definition:  COMMENT_SECTION_ID.    (13)

	.  reduce 13 (src line 388)


state 10
	import_definition:  IMPORT_ID.LITERAL_STRING 
	import_definition:  IMPORT_ID.'(' import_list ')' 

	LITERAL_STRING  shift 25
	'('  shift 26
	.  error


state 11
	declarator:  direct_declarator.    (14)
	direct_declarator:  direct_declarator.'[' constant_expression ']' 
	direct_declarator:  direct_declarator.'[' ']' 
	direct_declarator:  direct_declarator.'(' parameter_type_list ')' 
	direct_declarator:  direct_declarator.'(' identifier_list ')' 
	direct_declarator:  direct_declarator.'(' ')' 

	'('  shift 28
	'['  shift 27
	.  reduce 14 (src line 394)


state 12
	declaration_specifiers:  type_specifier.    (55)

	.  reduce 55 (src line 804)


state 13
	direct_declarator:  IDENTIFIER.    (15)

	.  reduce 15 (src line 404)


state 14
	direct_declarator:  '('.declarator ')' 

	IDENTIFIER  shift 13
	'('  shift 14
	.  error

	declarator  goto 29
	direct_declarator  goto 11

state 15
	type_specifier:  TYPE_INT_ID.    (56)

	.  reduce 56 (src line 814)


state 16
	type_specifier:  TYPE_STRING_ID.    (57)

	.  reduce 57 (src line 822)


state 17
	type_specifier:  TYPE_FLOAT_ID.    (58)

	.  reduce 58 (src line 829)


state 18
	type_specifier:  TYPE_BOOL_ID.    (59)

	.  reduce 59 (src line 836)


state 19
	type_specifier:  TYPE_TESTPLAN_ID.    (60)

	.  reduce 60 (src line 843)


state 20
	translation_unit:  translation_unit external_declaration.    (2)

	.  reduce 2 (src line 287)


state 21
	package_definition:  PACKAGE_ID LITERAL_STRING.    (6)

	.  reduce 6 (src line 321)


state 22
	function_definition:  declarator compound_statement.    (11)

	.  reduce 11 (src line 368)


state 23
	compound_statement:  '{'.'}' 
	compound_statement:  '{'.statement_list '}' 
	compound_statement:  '{'.declaration_list '}' 
	compound_statement:  '{'.declaration_list statement_list '}' 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TYPE_STRING_ID  shift 16
	TYPE_INT_ID  shift 15
	TYPE_FLOAT_ID  shift 17
	TYPE_BOOL_ID  shift 18
	TYPE_TESTPLAN_ID  shift 19
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	IF_ID  shift 44
	RETURN_ID  shift 45
	WHILE_ID  shift 46
	FOR_ID  shift 48
	DO_ID  shift 47
	STEP_ID  shift 49
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'{'  shift 23
	'}'  shift 30
	';'  shift 42
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 43
	expression_statement  goto 36
	statement  goto 33
	statement_list  goto 31
	compound_statement  goto 35
	declaration_list  goto 32
	declaration  goto 34
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	declaration_specifiers  goto 41
	type_specifier  goto 12
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	jump_statement  goto 39
	iteration_statement  goto 40
	selection_statement  goto 37
	selection_statement_else  goto 38
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 24
	function_definition:  declaration_specifiers declarator.compound_statement 

	'{'  shift 23
	.  error

	compound_statement  goto 106

state 25
	import_definition:  IMPORT_ID LITERAL_STRING.    (7)

	.  reduce 7 (src line 331)


state 26
	import_definition:  IMPORT_ID '('.import_list ')' 

	LITERAL_STRING  shift 108
	.  error

	import_list  goto 107

state 27
	direct_declarator:  direct_declarator '['.constant_expression ']' 
	direct_declarator:  direct_declarator '['.']' 

	IDENTIFIER  shift 89
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	']'  shift 110
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 112
	primary_expression  goto 71
	postfix_expression  goto 55
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 111
	constant_expression  goto 109
	unary_operator  goto 58

state 28
	direct_declarator:  direct_declarator '('.parameter_type_list ')' 
	direct_declarator:  direct_declarator '('.identifier_list ')' 
	direct_declarator:  direct_declarator '('.')' 

	IDENTIFIER  shift 117
	TYPE_STRING_ID  shift 16
	TYPE_INT_ID  shift 15
	TYPE_FLOAT_ID  shift 17
	TYPE_BOOL_ID  shift 18
	TYPE_TESTPLAN_ID  shift 19
	')'  shift 115
	.  error

	declaration_specifiers  goto 119
	type_specifier  goto 12
	parameter_declaration  goto 118
	parameter_list  goto 116
	parameter_type_list  goto 113
	identifier_list  goto 114

state 29
	direct_declarator:  '(' declarator.')' 

	')'  shift 120
	.  error


state 30
	compound_statement:  '{' '}'.    (29)

	.  reduce 29 (src line 538)


state 31
	compound_statement:  '{' statement_list.'}' 
	statement_list:  statement_list.statement 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	IF_ID  shift 44
	RETURN_ID  shift 45
	WHILE_ID  shift 46
	FOR_ID  shift 48
	DO_ID  shift 47
	STEP_ID  shift 49
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'{'  shift 23
	'}'  shift 121
	';'  shift 42
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 43
	expression_statement  goto 36
	statement  goto 122
	compound_statement  goto 35
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	jump_statement  goto 39
	iteration_statement  goto 40
	selection_statement  goto 37
	selection_statement_else  goto 38
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 32
	compound_statement:  '{' declaration_list.'}' 
	compound_statement:  '{' declaration_list.statement_list '}' 
	declaration_list:  declaration_list.declaration 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TYPE_STRING_ID  shift 16
	TYPE_INT_ID  shift 15
	TYPE_FLOAT_ID  shift 17
	TYPE_BOOL_ID  shift 18
	TYPE_TESTPLAN_ID  shift 19
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	IF_ID  shift 44
	RETURN_ID  shift 45
	WHILE_ID  shift 46
	FOR_ID  shift 48
	DO_ID  shift 47
	STEP_ID  shift 49
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'{'  shift 23
	'}'  shift 123
	';'  shift 42
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 43
	expression_statement  goto 36
	statement  goto 33
	statement_list  goto 124
	compound_statement  goto 35
	declaration  goto 125
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	declaration_specifiers  goto 41
	type_specifier  goto 12
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	jump_statement  goto 39
	iteration_statement  goto 40
	selection_statement  goto 37
	selection_statement_else  goto 38
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 33
	statement_list:  statement.    (33)

	.  reduce 33 (src line 570)


state 34
	declaration_list:  declaration.    (51)

	.  reduce 51 (src line 766)


state 35
	statement:  compound_statement.    (35)

	.  reduce 35 (src line 600)


state 36
	statement:  expression_statement.    (36)

	.  reduce 36 (src line 608)


state 37
	statement:  selection_statement.    (37)

	.  reduce 37 (src line 614)


state 38
	statement:  selection_statement_else.    (38)

	.  reduce 38 (src line 621)


state 39
	statement:  jump_statement.    (39)

	.  reduce 39 (src line 628)


state 40
	statement:  iteration_statement.    (40)

	.  reduce 40 (src line 635)


state 41
	declaration:  declaration_specifiers.';' 
	declaration:  declaration_specifiers.init_declarator_list ';' 

	IDENTIFIER  shift 13
	'('  shift 14
	';'  shift 126
	.  error

	init_declarator_list  goto 127
	init_declarator  goto 128
	declarator  goto 129
	direct_declarator  goto 11

state 42
	expression_statement:  ';'.    (70)

	.  reduce 70 (src line 938)


state 43
	expression_statement:  expression.';' 
	expression:  expression.',' assignment_expression 

	','  shift 131
	';'  shift 130
	.  error


state 44
	selection_statement:  IF_ID.'(' expression ')' statement 
	selection_statement_else:  IF_ID.'(' expression ')' statement ELSE_ID statement 

	'('  shift 132
	.  error


state 45
	jump_statement:  RETURN_ID.';' 
	jump_statement:  RETURN_ID.expression ';' 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	';'  shift 133
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 134
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 46
	iteration_statement:  WHILE_ID.'(' expression ')' statement 

	'('  shift 135
	.  error


state 47
	iteration_statement:  DO_ID.statement WHILE_ID '(' expression ')' ';' 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	IF_ID  shift 44
	RETURN_ID  shift 45
	WHILE_ID  shift 46
	FOR_ID  shift 48
	DO_ID  shift 47
	STEP_ID  shift 49
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'{'  shift 23
	';'  shift 42
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 43
	expression_statement  goto 36
	statement  goto 136
	compound_statement  goto 35
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	jump_statement  goto 39
	iteration_statement  goto 40
	selection_statement  goto 37
	selection_statement_else  goto 38
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 48
	iteration_statement:  FOR_ID.'(' expression_statement expression_statement ')' statement 
	iteration_statement:  FOR_ID.'(' expression_statement expression_statement expression ')' statement 

	'('  shift 137
	.  error


state 49
	iteration_statement:  STEP_ID.IDENTIFIER '(' expression ')' STIMULUS_ID compound_statement RESPONSE_ID compound_statement END_STEP_ID 
	iteration_statement:  STEP_ID.IDENTIFIER STIMULUS_ID compound_statement RESPONSE_ID compound_statement END_STEP_ID 

	IDENTIFIER  shift 138
	.  error


state 50
	expression:  assignment_expression.    (72)

	.  reduce 72 (src line 954)


state 51
	assignment_expression:  conditional_expression.    (74)

	.  reduce 74 (src line 971)


state 52
	assignment_expression:  unary_expression.assignment_operator assignment_expression 
	cast_expression:  unary_expression.    (115)

	ADD_ASSIGN  shift 144
	SUB_ASSIGN  shift 145
	MUL_ASSIGN  shift 141
	DIV_ASSIGN  shift 142
	MOD_ASSIGN  shift 143
	AND_ASSIGN  shift 146
	XOR_ASSIGN  shift 147
	OR_ASSIGN  shift 148
	'='  shift 140
	.  reduce 115 (src line 1274)

	assignment_operator  goto 139

state 53
	assignment_expression:  command_expression.    (76)

	.  reduce 76 (src line 988)


state 54
	conditional_expression:  logical_or_expression.    (86)
	logical_or_expression:  logical_or_expression.OR_OP logical_and_expression 

	OR_OP  shift 149
	.  reduce 86 (src line 1009)


state 55
	unary_expression:  postfix_expression.    (122)
	postfix_expression:  postfix_expression.'[' expression ']' 
	postfix_expression:  postfix_expression.'(' ')' 
	postfix_expression:  postfix_expression.'(' argument_expression_list ')' 
	postfix_expression:  postfix_expression.'.' IDENTIFIER 
	postfix_expression:  postfix_expression.PTR_OP IDENTIFIER 
	postfix_expression:  postfix_expression.INC_OP 
	postfix_expression:  postfix_expression.DEC_OP 

	INC_OP  shift 154
	DEC_OP  shift 155
	PTR_OP  shift 153
	'.'  shift 152
	'('  shift 151
	'['  shift 150
	.  reduce 122 (src line 1323)


state 56
	unary_expression:  INC_OP.unary_expression 

	IDENTIFIER  shift 89
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'~'  shift 76
	'!'  shift 77
	.  error

	unary_expression  goto 156
	primary_expression  goto 71
	postfix_expression  goto 55
	unary_operator  goto 58

state 57
	unary_expression:  DEC_OP.unary_expression 

	IDENTIFIER  shift 89
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'~'  shift 76
	'!'  shift 77
	.  error

	unary_expression  goto 157
	primary_expression  goto 71
	postfix_expression  goto 55
	unary_operator  goto 58

state 58
	unary_expression:  unary_operator.cast_expression 

	IDENTIFIER  shift 89
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'~'  shift 76
	'!'  shift 77
	.  error

	cast_expression  goto 158
	unary_expression  goto 112
	primary_expression  goto 71
	postfix_expression  goto 55
	unary_operator  goto 58

state 59
	command_expression:  list_application_command.    (145)

	.  reduce 145 (src line 1535)


state 60
	command_expression:  verify_application_url_category_command.    (146)

	.  reduce 146 (src line 1547)


state 61
	command_expression:  generate_data_command.    (147)

	.  reduce 147 (src line 1558)


state 62
	command_expression:  application_makeappuser_command.    (148)

	.  reduce 148 (src line 1569)


state 63
	command_expression:  application_makeapptid_command.    (149)

	.  reduce 149 (src line 1580)


state 64
	command_expression:  test_route_command.    (150)

	.  reduce 150 (src line 1591)


state 65
	command_expression:  create_application_command.    (151)

	.  reduce 151 (src line 1597)


state 66
	command_expression:  delete_application_command.    (152)

	.  reduce 152 (src line 1603)


state 67
	command_expression:  delete_application_tid_command.    (153)

	.  reduce 153 (src line 1609)


state 68
	command_expression:  run_sql_command.    (154)

	.  reduce 154 (src line 1615)


state 69
	command_expression:  delete_application_user_command.    (155)

	.  reduce 155 (src line 1621)


state 70
	logical_or_expression:  logical_and_expression.    (87)
	logical_and_expression:  logical_and_expression.AND_OP inclusive_or_expression 

	AND_OP  shift 159
	.  reduce 87 (src line 1019)


state 71
	postfix_expression:  primary_expression.    (135)

	.  reduce 135 (src line 1438)


state 72
	unary_operator:  '&'.    (116)

	.  reduce 116 (src line 1284)


state 73
	unary_operator:  '*'.    (117)

	.  reduce 117 (src line 1291)


state 74
	unary_operator:  '+'.    (118)

	.  reduce 118 (src line 1297)


state 75
	unary_operator:  '-'.    (119)

	.  reduce 119 (src line 1303)


state 76
	unary_operator:  '~'.    (120)

	.  reduce 120 (src line 1309)


state 77
	unary_operator:  '!'.    (121)

	.  reduce 121 (src line 1315)


state 78
	list_application_command:  LIST_ID.APPS_ID 

	APPS_ID  shift 160
	.  error


state 79
	verify_application_url_category_command:  VERIFY_ID.expression URLID_ID expression WITH_ID '(' expression ')' 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 161
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 80
	generate_data_command:  GENDATA_ID.expression LOOP_ID '(' expression ')' 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 162
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 81
	application_makeappuser_command:  MAKEAPPUSER_ID.expression IN_ID '(' expression ')' 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 163
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 82
	application_makeapptid_command:  MAKEAPPTID_ID.expression IN_ID '(' expression ')' 

	IDENTIFIER  shift 89
	CREATE_ID  shift 84
	LIST_ID  shift 78
	MAKEAPPUSER_ID  shift 81
	MAKEAPPTID_ID  shift 82
	EMAIL_ID  shift 96
	UUID_ID  shift 97
	GENDATA_ID  shift 80
	INTEGER_ID  shift 95
	FLOAT_ID  shift 93
	VERIFY_ID  shift 79
	TRUE_ID  shift 91
	FALSE_ID  shift 92
	LITERAL_STRING  shift 94
	INC_OP  shift 56
	DEC_OP  shift 57
	TESTROUTE_ID  shift 83
	DELETE_ID  shift 85
	RUNSQL_ID  shift 86
	DELETE_APPUSER_ID  shift 87
	'&'  shift 72
	'+'  shift 74
	'-'  shift 75
	'*'  shift 73
	'('  shift 90
	'~'  shift 76
	'!'  shift 77
	.  error

	additive_expression  goto 103
	multiplicative_expression  goto 104
	cast_expression  goto 105
	unary_expression  goto 52
	primary_expression  goto 71
	command_expression  goto 53
	postfix_expression  goto 55
	assignment_expression  goto 50
	expression  goto 164
	shift_expression  goto 102
	relational_expression  goto 101
	equality_expression  goto 100
	and_expression  goto 99
	exclusive_or_expression  goto 98
	inclusive_or_expression  goto 88
	logical_and_expression  goto 70
	logical_or_expression  goto 54
	conditional_expression  goto 51
	application_makeappuser_command  goto 62
	generate_data_command  goto 61
	verify_application_url_category_command  goto 60
	list_application_command  goto 59
	application_makeapptid_command  goto 63
	unary_operator  goto 58
	test_route_command  goto 64
	create_application_command  goto 65
	delete_application_command  goto 66
	delete_application_tid_command  goto 67
	run_sql_command  goto 68
	delete_application_user_command  goto 69

state 83
	test_route_command:  TESTROUTE_ID.expression IN_ID '(' expression ')' 
